fix: overflow scoll

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,5 +1,6 @@
-code pre {
+pre code {
   white-space: pre !important;
+  overflow: auto;
 }
 
 .main-content {
